...
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_icon">Drawer element icon</string>

    <!-- ACTIONS -->
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_as_completed_notice">Set as completed</string>
    <string name="set_as_done_movie">I\'ve watched this</string>
    <string name="set_as_done_book">I\'ve read this</string>
...
    <string name="validation_media_item_same_title_tracking">You are already tracking a media item with the same name</string>

    <!-- HOME -->
    <string name="home_empty">No categories</string>

    <!-- FORMS -->
    <string name="form_exit_error">Are you sure you want to discard your changes?</string>
    <string name="form_exit_error_discard">Discard</string>
    <string name="form_exit_error_keep">Keep editing</string>

    <!-- CATEGORIES FORM -->
    <string name="form_title_category_name">Name</string>
    <string name="form_title_color">Color</string>
    <string name="form_color_picker_title">Choose Color</string>
    <string name="form_media_type_select_title">Choose Media</string>
...
